[package]
name = "brickset"
version = "0.1.0"
edition = "2021"
description = "BrickSet API bindings"

[features]
default = [ "log", "reqwest" ]
log = [ "dep:log" ]
reqwest = [ "dep:reqwest" ]

[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = [ "full" ] }
rpassword = "7.2"

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
url = "2.3.1"
lazy_static = "1.4"
chrono = { version = "0.4", features = [ "serde" ] }
itertools = { version = "0.10" }

log = { version = "0.4", optional = true }
reqwest = { version = "0.11.18", optional = true }
